// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card tag multiple 1`] = `
<div
  className="card h-24 cursor-pointer"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="card_inner flex"
  >
    <div
      className="emoji flex flex-row items-center justify-center mr-6 w-24 h-24 bg-white rounded-lg"
    >
      <div
        className="emoji_inner w-12 h-12 text-5xl"
      >
        🎵
      </div>
    </div>
    <div
      className="text flex-1"
    >
      <h1
        className="dark:text-white break-all text-lg font-bold md:text-xl"
      >
        Title Name
      </h1>
      <div
        className="tag pt-1"
      >
        <div
          className="tag_inner flex"
        >
          <div
            className="mr-2 p-0 text-href"
          >
            <a
              href="/tags/1"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              #Title Name
            </a>
          </div>
          <div
            className="mr-2 p-0 text-href"
          >
            <a
              href="/tags/2"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              #Title Name
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card tag none 1`] = `
<div
  className="card h-24 cursor-pointer"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="card_inner flex"
  >
    <div
      className="emoji flex flex-row items-center justify-center mr-6 w-24 h-24 bg-white rounded-lg"
    >
      <div
        className="emoji_inner w-12 h-12 text-5xl"
      >
        🎵
      </div>
    </div>
    <div
      className="text flex-1"
    >
      <h1
        className="dark:text-white break-all text-lg font-bold md:text-xl"
      >
        Title Name
      </h1>
      <div
        className="tag pt-1"
      >
        <div
          className="tag_inner flex"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Card tag single 1`] = `
<div
  className="card h-24 cursor-pointer"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="card_inner flex"
  >
    <div
      className="emoji flex flex-row items-center justify-center mr-6 w-24 h-24 bg-white rounded-lg"
    >
      <div
        className="emoji_inner w-12 h-12 text-5xl"
      >
        🎵
      </div>
    </div>
    <div
      className="text flex-1"
    >
      <h1
        className="dark:text-white break-all text-lg font-bold md:text-xl"
      >
        Title Name
      </h1>
      <div
        className="tag pt-1"
      >
        <div
          className="tag_inner flex"
        >
          <div
            className="mr-2 p-0 text-href"
          >
            <a
              href="/tags/1"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              #Title Name
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
